Create page - Rapport

--- a/JAVA-PPE-GSB-2014-APPLI/src/gsb/.gitignore
+++ b/JAVA-PPE-GSB-2014-APPLI/src/gsb/.gitignore
@@ -16,3 +16,6 @@
 /GuiMainPanel$11.class
 /VerifServiceBDD.class
 /panelPraticiens.class
+/GuiMainPanel$12.class
+/GuiMainPanel$13.class
+/NewRapport.class
