Update Java [Pré Final Praticiens]

--- a/JAVA-PPE-GSB-2014-APPLI/src/gsb/.gitignore
+++ b/JAVA-PPE-GSB-2014-APPLI/src/gsb/.gitignore
@@ -23,3 +23,6 @@
 /GuiMainPanel$14.class
 /GuiMainPanel$15.class
 /GuiMainPanel$16.class
+/GuiMainPanel$17.class
+/GuiMainPanel$18.class
+/GuiMainPanel$19.class
